# phicus_project

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  pytest.ini
config/: settings.py  urls.py
tic_tac_toe/: admin.py  models.py  test.py  urls.py  views.py
tic_tac_toe/migrations/: 0001_initial.py  0002_tournament_match_delete_partida_delete_torneo.py
tic_tac_toe/templates/: 404.html
tic_tac_toe/templates/tictactoe/: board.html  dashboard.html  setup.html
